--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-redux": "8.1.3",
     "react-router-dom": "6.30.0",
     "react-slick": "0.29.0",
+    "recharts": "^3.2.1",
     "redux-persist": "6.0.0",
     "simplebar-react": "3.3.0",
     "slick-carousel": "1.8.1",
