--- a/backend/medical_store/pom.xml
+++ b/backend/medical_store/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.5</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 
     </dependencies>
 
