finshed order start VnPAY

--- a/backend/medical_store/src/main/resources/application.yml
+++ b/backend/medical_store/src/main/resources/application.yml
@@ -13,6 +13,11 @@ app:
       url: cloudinary://673758235311112:lQ-W_bCswUJHcqmGXVenasImLnY@dqtj816ds
     file:
       prefix: /uploads
+vnpay:
+  tmn-code: 0D7U0C4Z
+  hash-secret: 8ZF37DFFNM6F4M756V6PA2MW4UO75DM4
+  pay-url: https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+  return-url: http://localhost:8080/api/v1/payment/vnpay/return
 
 spring:
     application:
